<resources>
    <string name="app_name">AndroidProject</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="title_activity_game_menu">GameMenuActivity</string>
    <string name="title_activity_level_game">LevelGameActivity</string>
    <string name="title_activity_game_option">GameOptionActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_rankings">RankingsActivity</string>
    <string name="title_activity_inscription">InscriptionActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_game_option_actvity">GameOptionActvity</string>
    <string name="title_activity_game_statistics">GameStatisticsActivity</string>

    <string name="level_1_description">lvl1</string>
    <string name="level_2_description">lvl2</string>
    <string name="level_3_description">lvl3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textConnection">Please identify yourself</string>
    <string name="logOn">Connection</string>
    <string name="newNickname">Inscription</string>
    <string name="pwForgotten">Password forgotten ?</string>
    <string name="nickname">Nickname</string>
    <string name="pw">Password</string>
    <string name="confirmPw">Confirmer password</string>
    <string name="menuPlay">>Play</string>
    <string name="menuOption">>Options</string>
    <string name="menuStatistics">>Statistiques</string>
    <string name="menuRankings">>Classements</string>
    <string name="titleOption">Options</string>
    <string name="optionMusic">Musique</string>
    <string name="optionSound">Son</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="resetData">Supprimer mes données</string>
    <string name="deconnection">Se déconnecter</string>
    <string name="titleLevel">Choix du niveau</string>
    <string name="titleRankings">Classements</string>
    <string name="textNewPlayer">Nouveau Joueur</string>
    <string name="labelSexe">Sexe</string>
    <string name="labelNationality">Nationalité</string>
    <string name="labelLocalite">Localtié</string>
    <string name="mailAdress">Adresse e-mail</string>
    <string name="validate">Valider</string>
    <string name="rankingWorld">Monde</string>
    <string name="rankingNational">Belgique</string>
    <string name="rankingLocal">Localité</string>
    <string name="title_activity_password_forgotten">PasswordForgottenActivity</string>
    <string name="pwForgottenNicknameText">Pseudo ou email</string>
    <string name="sendPasswordRecoveryRequest">Envoyer</string>
    <string name="titlePasswordRequest">Mot de passe oublié</string>
    <string name="playTitle">Jouer</string>
    <string name="optionTitle">Options</string>
    <string name="rankingsTitle">Classements</string>
    <string name="evolutionTitle">Progression</string>
    <string name="returnToLevel">Retour au choix du level</string>
    <string name="labelPointsLevelStats">Points pour le level: </string>
    <string name="labelBonusLevelStats">Bonus temps: </string>
    <string name="labelTotalLevelStats">Score total: </string>
    <string name="defaultDate">22/10/2015</string>
    <string name="changeDate">Change date</string>
    <string name="backButton">Retour</string>
    <string name="labelLocalitéRankings">Localité</string>
    <string name="labelLevelRankings">Niveau</string>
    <string name="labelBestScoreStat">Meilleur score: </string>
    <string name="labelLevelBestScoreStat">Niveau: </string>
    <string name="labelXPStat">Expérience: </string>
    <string name="difficultyLevelStat">Niveau difficulté </string>
    <string name="facebook_app_id">1073791082651684</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_facebook">FacebookActivity</string>


</resources>
