<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.henallux.androidproject.GameMenuActivity"
    android:background="@drawable/fondcassebrique">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuPlay"
            android:id="@+id/viewMenuPlay"
            android:textSize="40sp"
            android:textColor="#fff7e1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuOption"
            android:id="@+id/viewMenuOptions"
            android:textSize="40sp"
            android:textColor="#fff7e1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuStatistics"
            android:id="@+id/viewMenuStatistics"
            android:textSize="40sp"
            android:textColor="#fff7e1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuRankings"
            android:id="@+id/viewMenuRankings"
            android:textSize="40sp"
            android:textColor="#fff7e1" />
    </LinearLayout>



</RelativeLayout>
