<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.henallux.androidproject.PasswordForgottenActivity"
    android:background="#d6c50700">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwForgottenNicknameText"
        android:hint="@string/pwForgottenNicknameText"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/titlePasswordForgotten"
        android:layout_alignStart="@+id/titlePasswordForgotten"
        android:layout_alignRight="@+id/titlePasswordForgotten"
        android:layout_alignEnd="@+id/titlePasswordForgotten" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendPasswordRecoveryRequest"
        android:id="@+id/buttonSendPasswordRecoveryRequest"
        android:layout_below="@+id/pwForgottenNicknameText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titlePasswordRequest"
        android:id="@+id/titlePasswordForgotten"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />
</RelativeLayout>
